--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <div id="root"></div>
   
-  <!-- Project -->
+  <!-- Project x -->
   <script src="config.js"></script>
 </body>
 </html>
